# myrepository

./: Dockerfile  Makefile  pyproject.toml
api/: app.py  chat_operations.py
common/: settings.py
docker_compose/: app.yaml
models/: chat_operations.py
