[tool.poetry]
name = "fastapi-train-bot"
version = "0.1.0"
description = ""
authors = ["aypetrunin <a.y.petrunin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pymongo = "^4.6.1"
django-environ = "^0.11.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
